test/expected/explain_aai.out
explain void f(int x[][])
                      ^
23: error: array dimension required
